# rust-workspace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  libtodo.d  todo.d
.fingerprint/autocfg-89f87618ee9d8889/: lib-autocfg  lib-autocfg.json
.fingerprint/axum-278e029671691d21/: lib-axum  lib-axum.json
.fingerprint/axum-core-212d68d429ad357a/: lib-axum_core  lib-axum_core.json
.fingerprint/bitflags-52331985781f6d47/: lib-bitflags  lib-bitflags.json
.fingerprint/byteorder-6d1fd29486dc3b61/: lib-byteorder  lib-byteorder.json
.fingerprint/bytes-d27ec48e375f99fe/: lib-bytes  lib-bytes.json
.fingerprint/cfg-if-73dbcf6a2d0ddc7f/: lib-cfg_if  lib-cfg_if.json
.fingerprint/darling-abbfdbd751b191fe/: lib-darling  lib-darling.json
.fingerprint/darling_core-5c6ae924ba606353/: lib-darling_core  lib-darling_core.json
.fingerprint/darling_macro-ea7b24b3bd8c2f83/: lib-darling_macro  lib-darling_macro.json
.fingerprint/diesel-26e3d9a111bc8720/: lib-diesel  lib-diesel.json
.fingerprint/diesel_derives-7733eeaea9efc4fd/: lib-diesel_derives  lib-diesel_derives.json
.github/workflows/: rust.yml
todo/: .clippy.toml  .env.backup  .env.example  .env.test  .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
todo/.github/workflows/: rust.yml
todo/migrations/2025-03-16-091537_create_todos_table/: down.sql  up.sql
todo/src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
todo/src/models/: task_test.rs
todo/tests/: create-ongithub.sh  create.sh  e2e.rs  helpers.rs  integration_tests.rs
todo/tests/e2e/: mod.rs
todo/tests/integration/: mod.rs
(+157 files in other folders)
