[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.2.8", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
